usersvc2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: usersvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usersvc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: usersvc
    spec:
      containers:
      - name: usersvc
        image: usersvc:step2
        resources: {}
      restartPolicy: Always
status: {}
